Pythonで作成した色追加のアニメーションを新規追加

--- a/LineArt/lineColor.html
+++ b/LineArt/lineColor.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="line.js"></script>
+    <script src="lineColor.js"></script>
 </body>
 </html>
