入門講座で作成したTODOページを追加

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="LineArt/lineColor.html">LineArtColor</a>
         </li>
+        <li>
+            <a href="TODO/index.html">LineArtColor</a>
+        </li>
     </ul>
 </body>
 </html>
