必要に応じて説明が表示されるように変更

--- a/index.html
+++ b/index.html
@@ -3,19 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Study Page</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        .item {
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
+        .item-title {
+            font-weight: bold;
+            font-size: 18px;
+            color: #333;
+        }
+        .item-description {
+            margin-top: 5px;
+            padding-left: 20px;
+            color: #555;
+            display: none; /* 初期状態では非表示 */
+        }
+    </style>
+
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="LineArt/line.html">LineArt</a>
-        </li>
-        <li>
-            <a href="LineArt/lineColor.html">LineArtColor</a>
-        </li>
-        <li>
-            <a href="TODO/index.html">LineArtColor</a>
-        </li>
-    </ul>
+    <h1>JavaScript勉強用に作成したページ</h1>
+
+    <div class="item">
+        <div class="item-title">
+            ラインアートアニメーション
+            <a href="LineArt/line.html">→</a>
+        </div>
+        <div class="item-description">
+            JavaScriptを使って図形やアニメーションを描画するCanvas要素を使ってアニメーションを作成
+        </div>
+    </div>
+
+    <div class="item">
+        <div class="item-title">
+            ラインアートカラーアニメーション
+            <a href="LineArt/lineColor.html">→</a>
+        </div>
+        <div class="item-description">
+            ラインアートアニメーションに色がつくように追加
+        </div>
+    </div>
+
+    <div class="item">
+        <div class="item-title">
+            TODO
+            <a href="TODO/index.html">→</a>
+        </div>
+        <div class="item-description">
+            下記講座を見たときに作成
+            <p>JavaScriptの「基礎」が1時間で分かる「超」入門講座【初心者向け】</p>
+            <p>https://www.youtube.com/watch?v=E08jeQBa1D0</p>
+        </div>
+    </div>
+
+    <script>
+        // 全ての項目を取得
+        document.querySelectorAll('.item').forEach(item => {
+            // タイトルクリック時の処理
+            item.addEventListener('click', () => {
+                const description = item.querySelector('.item-description');
+                // 表示・非表示を切り替え
+                description.style.display = (description.style.display === 'block') ? 'none' : 'block';
+            });
+        });
+    </script>
+
 </body>
 </html>
