youtubeのリンクを直接表示しないように変更

--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
         </div>
         <div class="item-description">
             下記講座を見たときに作成
-            <p>JavaScriptの「基礎」が1時間で分かる「超」入門講座【初心者向け】</p>
-            <p>https://www.youtube.com/watch?v=E08jeQBa1D0</p>
+            <div>
+                <a href="https://www.youtube.com/watch?v=E08jeQBa1D0">JavaScriptの「基礎」が1時間で分かる「超」入門講座【初心者向け】</a>
+            </div>
         </div>
     </div>
+</div>
 
     <script>
         // 全ての項目を取得
