--- a/TODO(JS)/index.html
+++ b/TODO(JS)/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="input-area">
-        <input placeholder="TODOを入力">
-        <button>追加</button>
+        <input id="add-text" placeholder="TODOを入力">
+        <button id="add-button">追加</button>
     </div>
     <div class="incomplete-area">
         <p class="title">未完了のTODO</p>
-        <ul>
+        <ul id="imcomplete-list">
             <li>
                 <div class="list-row">
                     <p class="todo-item">TODOです</p>
@@ -44,6 +44,6 @@
         </ul>
 
     </div>
-    <!-- script src="./index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
