--- a/TODO(JS)/index.html
+++ b/TODO(JS)/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="incomplete-area">
         <p class="title">未完了のTODO</p>
-        <ul id="imcomplete-list">
+        <ul id="incomplete-list">
             <li>
                 <div class="list-row">
                     <p class="todo-item">TODOです</p>
@@ -34,7 +34,7 @@
     </div>
     <div class="complete-area">
         <p class="title">完了のTODO</p>
-        <ul>
+        <ul id="complete-list">
             <li>
                 <div class="list-row">
                     <p class="todo-item">TODOでした</p>
