React入門で作成したページを追加

--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
         </div>
     </div>
 
+    <div class="item">
+        <div class="item-title">
+            TODO
+            <a href="TODO(JS)/index.html">→</a>
+        </div>
+        <div class="item-description">
+            下記講座の「セクション5：素のJavaScriptだけでTODOアプリを作成してみよう」を受講したときに作成
+            <div>
+                <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="item">
+        <div class="item-title">
+            TODO
+            <a href="../javascript_study_codesandbox/">→</a>
+        </div>
+        <div class="item-description">
+            下記講座の「セクション6：Reactの基礎を学ぶ」を受講したときに作成
+            <div>
+                <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
+            </div>
+        </div>
+    </div>
+
     <script>
         // 全ての項目を取得
         document.querySelectorAll('.item').forEach(item => {
