--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="item">
         <div class="item-title">
-            TODO
+            TODO(だれでもエンジニア / 山浦清透)
             <a href="TODO/index.html">→</a>
         </div>
         <div class="item-description">
@@ -67,26 +67,32 @@
 
     <div class="item">
         <div class="item-title">
-            TODO
+            TODO(じゃけぇ (Takumi Okada))
             <a href="TODO(JS)/index.html">→</a>
         </div>
         <div class="item-description">
-            下記講座の「セクション5：素のJavaScriptだけでTODOアプリを作成してみよう」を受講したときに作成
+            下記講座を受講したときに作成
             <div>
                 <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
+                <li>
+                    セクション5：素のJavaScriptだけでTODOアプリを作成してみよう
+                </li>
             </div>
         </div>
     </div>
 
     <div class="item">
         <div class="item-title">
-            TODO
+            TODO React(じゃけぇ (Takumi Okada))
             <a href="../javascript_study_codesandbox/">→</a>
         </div>
         <div class="item-description">
-            下記講座の「セクション6：Reactの基礎を学ぶ」を受講したときに作成
+            下記講座を受講したときに作成
             <div>
                 <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
+                <li>
+                    セクション6：Reactの基礎を学ぶ
+                </li>
             </div>
         </div>
     </div>
