夜空と流れ星を作成

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <div class="item">
         <div class="item-title">
-            TODO React(じゃけぇ (Takumi Okada))
+            Reactの基礎(じゃけぇ (Takumi Okada))
             <a href="../javascript_study_codesandbox/">→</a>
         </div>
         <div class="item-description">
@@ -92,6 +92,49 @@
                 <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
                 <li>
                     セクション6：Reactの基礎を学ぶ
+                </li>
+                <div>
+                    codesandbox で作成した<br>
+                    codesandbox 内ではエミュレート？しているからちゃんとページが表示されたが、
+                    作成したコードでは正しく表示されなかった。
+                    コンパイルのような作業が必要？みたいで下記を行って正しく表示されるページを作成できた。
+                    <pre><code>
+                    git clone
+                    npm install gh-pages --save-dev
+                    npm run deploy
+                    </code></pre>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="item">
+        <div class="item-title">
+            ReactのTODO(じゃけぇ (Takumi Okada))
+            <a href="https://javascript-study-react-todo.vercel.app/">→</a>
+        </div>
+        <div class="item-description">
+            下記講座を受講したときに作成
+            <div>
+                <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
+                <li>
+                    セクション7：Reactを使ってTODOアプリを作成してみよう
+                </li>
+            </div>
+        </div>
+    </div>
+
+    <div class="item">
+        <div class="item-title">
+            夜空と流れ星
+            <a href="https://javascript-study-react-todo.vercel.app/">→</a>
+        </div>
+        <div class="item-description">
+            下記講座を受講したときに作成
+            <div>
+                <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
+                <li>
+                    セクション7：Reactを使ってTODOアプリを作成してみよう
                 </li>
             </div>
         </div>
@@ -108,6 +151,9 @@
             });
         });
     </script>
+
+
+
 
 </body>
 </html>
