タイトルページに夜空と流れ星を追加

--- a/index.html
+++ b/index.html
@@ -127,15 +127,13 @@
     <div class="item">
         <div class="item-title">
             夜空と流れ星
-            <a href="https://javascript-study-react-todo.vercel.app/">→</a>
+            <a href="shootingstar/index.html">→</a>
         </div>
         <div class="item-description">
-            下記講座を受講したときに作成
+            夜空と流れ星
+            下記ページにある処理の流れをJavaScriptで作成
             <div>
-                <a href="https://www.udemy.com/course/modern_javascipt_react_beginner/">モダンJavaScriptの基礎から始める挫折しないためのReact入門</a>
-                <li>
-                    セクション7：Reactを使ってTODOアプリを作成してみよう
-                </li>
+                <a href="https://www.youtube.com/shorts/XX6d5u0qEEw">Python10行でプログラミング 流れ星編</a>
             </div>
         </div>
     </div>
