--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="item">
         <div class="item-title">
             夜空と流れ星
-            <a href="shootingstar/index.html">→</a>
+            <a href="shootingstar/shootingstar.html">→</a>
         </div>
         <div class="item-description">
             夜空と流れ星
