夜空にカラーラインアートを結合

--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
         </div>
     </div>
 
+    <div class="item">
+        <div class="item-title">
+            夜空にラインアートカラーアニメーション
+            <a href="LineArt/lineColorStar.html">→</a>
+        </div>
+        <div class="item-description">
+            ラインアートカラーアニメーションに夜空と流れ星を結合
+        </div>
+    </div>
+
     <script>
         // 全ての項目を取得
         document.querySelectorAll('.item').forEach(item => {
